[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/ant.png" type="Texture" id=1]
[ext_resource path="res://environment/Spawner.gd" type="Script" id=2]
[ext_resource path="res://sfx/Monster_Alien_Grunt_Hiss2.wav" type="AudioStream" id=3]

[sub_resource type="Animation" id=1]
resource_name = "open"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 92, 93, 94 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -8 ), Vector2( 0, -20 ), Vector2( 0, -5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "spawn_alien"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "start"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Spawner" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -5 )
rotation = -1.5708
texture = ExtResource( 1 )
vframes = 11
hframes = 13
frame = 94

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/open = SubResource( 1 )
anims/start = SubResource( 2 )

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="SpawnSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
bus = "sfx"
[connection signal="timeout" from="SpawnTimer" to="." method="spawn_alien"]
